--- a/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
@@ -97,6 +97,12 @@
                 </ul>
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="GANANCIA">Cantidad Total</label>
+            <input @bind="@Total" class="form-control" readonly />
+        </div>
+
         <div class="card-footer">
             <button type="button" class="btn btn-outline-primary form-control" @onclick="ExportToPdf">Exportar a PDF</button>
         </div>
@@ -111,6 +117,7 @@
     private double cantidadDeLista { get; set; } = 0;
     private int contador { get; set; }
     Paginas pagina = new Paginas();
+    int Total;
 
     private List<EntradaProductos> lista { get; set; }
 
@@ -126,6 +133,17 @@
         lista = new List<EntradaProductos>();
         DesdeFecha = DateTime.Now;
         HastaFecha = DateTime.Now;
+    }
+
+    private decimal CalcularTotal()
+    {
+        Total = 0;
+
+        foreach (var item in lista)
+        {
+            Total += item.CantidadTotal;
+        }
+        return Total;
     }
 
     private void ContarPaginas(Expression<Func<EntradaProductos, bool>> expression)
@@ -188,7 +206,7 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfEntradaProductos(lista, DateTime.Now.ToString()))
+        using (MemoryStream excelStream = ExportService.CreatePdfEntradaProductos(lista, DateTime.Now.ToString(), Total))
         {
             await JS.SaveAs("EntradaProductos.pdf", excelStream.ToArray());
         }
@@ -237,5 +255,6 @@
         {
             throw;
         }
+        CalcularTotal();
     }
 }
