--- a/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
@@ -80,7 +80,7 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfProductos(Lista, Fecha))
+        using (MemoryStream excelStream = ExportService.CreatePdfProductos(Lista, Fecha, Total))
         {
             await JS.SaveAs("Productos.pdf", excelStream.ToArray());
         }
