Cambios en migracion...

--- a/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
@@ -186,7 +186,7 @@
 
     private void CalcularTotal()
     {
-        decimal total = 0;
+        int total = 0;
         foreach (var item in entradaProductos.DetalleEntrada)
         {
             total += item.Cantidad;
