--- a/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
@@ -61,6 +61,7 @@
 
     List<Facturas> lista = new List<Facturas>();
     private String Fecha;
+    private int cantidad;
     private decimal total = 0;
     List<AuxFactura> auxLista;
     AuxFactura aux = new AuxFactura();
@@ -76,17 +77,20 @@
     private void CalcularTotal()
     {
         decimal auxTotal = 0;
+        int auxCantidad = 0;
         foreach (var item in lista)
         {
             auxTotal += item.Total;
+            auxCantidad++;
         }
 
         total = auxTotal;
+        cantidad = auxCantidad;
     }
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString()))
+        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString(), total.ToString(),cantidad.ToString()))
         {
             await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
         }
