--- a/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
@@ -124,7 +124,7 @@
                 <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
                 <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
                 <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
-                <button type="button" class="btn btn-warning" @onclick="ExportToPdf"><span class="icon-print_disabled"></span>Imprimir</button>
+                <button type="button" class="btn btn-warning" @onclick="ExportToPdf"><span class="icon-print_disabled"></span>Exportar a PDF</button>
             </div>
         </div>
 
@@ -313,12 +313,19 @@
         }
         else
         {
-            paso = FacturasBLL.Guardar(facturas);
+            if (facturas.FacturaId == 0)
+                paso = FacturasBLL.Guardar(facturas);
+            else
+            {
+                if (FacturasBLL.ExisteParaModificar(facturas.FacturaId))
+                    paso = FacturasBLL.Guardar(facturas);
+            }
+
 
             if (paso)
             {
                 await JS.Confirmar("top-center", "success", "Guardado Exitosamente", "Buen trabajo", false, 2000);
-                if (await JS.ConfirmDelete("Confirmar", "¿Esta seguro que desea imprimir esta factura?", "question"))
+                if (await JS.ConfirmDelete("Confirmar", "¿Esta seguro que desea exportar esta factura?", "question"))
                 {
                     var aux = ExportToPdf();
                 }
